<resources>
    <string name="app_name">iFANCL</string>
    <string name="facebook_applicationId">557357637621844</string>
    <string name="ok_btn_title">OK</string>
    <string name="cancel_btn_title">Cancel</string>
    <string name="confirm_btn_title">Confirm</string>
    <string name="login_btn_title">Login</string>
    <string name="continue_btn_title">Continue</string>
    <string name="back_btn_title">Back</string>
    <string name="share_btn_title">Share</string>
    <string name="finish_btn_title">finish</string>
    <string name="edit_btn_title">Edit</string>
    <string name="save_btn_title">Save</string>
    <string name="newest_btn_title">Latest</string>
    <string name="oldest_btn_title">Oldest</string>
    <string name="try_again_btn_title">Try Again</string>
    <string name="security_check_btn_title">Enter code</string>
    <string name="done_btn_title">Done</string>
    <string name="accept_btn_title">Agree</string>
    <string name="menu_ibeauty_credit_btn_title">iBeauty Credit</string>
    <string name="menu_product_btn_title">Product Details</string>
    <string name="menu_fancl_magazine_btn_title">Lifestyle Magazine</string>
    <string name="menu_my_account_btn_title">My Account</string>
    <string name="menu_shop_locator_btn_title">Shop Location</string>
    <string name="menu_about_fancl_btn_title">Brand Uniqueness</string>
    <string name="menu_notification_btn_title">My Message</string>
    <string name="menu_settings_btn_title">Setting</string>
    <string name="menu_qr_code_btn_title">QR Scanner</string>
    <string name="menu_bookmark_btn_title">My Favourite</string>
    <string name="whats_hot_btn">What\'s Hot</string>
    <string name="promotion_btn">Promotion</string>
    <string name="beauty_ichannel_btn">FANCL TV</string>
    <string name="more_btn">More</string>
    <string name="welcome_page_title">Welcome to</string>
    <string name="fancl_iloyalty_title">iFANCL</string>
    <string name="welcome_page_sign_up_btn_title">Sign in</string>
    <string name="welcome_page_login_btn_title">Login</string>
    <string name="non_member_login_btn_title">Not yet a FANCL member</string>
    <string name="sign_up_title">iFANCL Member</string>
    <string name="sign_up_welcome_title">Welcome to iFANCL</string>
    <string name="sign_up_hint_title">Enter your FANCL Member ID</string>
    <string name="sign_up_welcome_userguide_title">Welcome</string>
    <string name="sign_up_welcome_userguide_msg">Welcome to iFANCL! Start purchasing in our Hong Kong and Macau stores and enjoy your privileges.</string>
    <string name="title_activity_sign_up_enter_member_id">SignUpEnterMemberID</string>
    <string name="sign_up_scan_member_id_msg">Do you like to scan the QR code on the receipt to get your Member ID?</string>
    <string name="login_page_title">iFANCL Member login</string>
    <string name="login_email_field_title">Email</string>
    <string name="login_password_field_title">Password</string>
    <string name="login_page_forget_password_btn_title">Forget Password?</string>
    <string name="login_tos_page_back_msg">The registration process is not yet complete. Would you like to cancel?</string>
    <string name="login_forget_password_title">Forget Password</string>
    <string name="login_forget_password_phone_field_title">Mobile / Member ID</string>
    <string name="login_forget_password_email_field_title">Email</string>
    <string name="login_forget_password_new_password_title">Your new password has been sent to your registered e-mail</string>
    <string name="non_member_login_title">Non-member Login</string>
    <string name="non_member_login_msg">Purchase $100 to become FANCL Member. \n\nSome functions are not open to non-member. Thank you for your understanding.</string>
    <string name="enter_profile_info_member_id_title">Member ID:</string>
    <string name="enter_profile_info_registered_title">Registered</string>
    <string name="enter_profile_info_name_title">Account Name:</string>
    <string name="enter_profile_personal_information_title">Personal Information</string>
    <string name="card_replace_update_success">You have successfully registered as iFANCL member</string>
    <string name="card_replace_your_new_member_id">Your New iFANCL Member ID:</string>
    <string name="card_replace_register_loading">The Registration has entered the final stage. Please be patient and wait a while, thanks!</string>
    <string name="no_network_connection">Connection failed. Please check your network connection.</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="hot_news_detail_play_video_title">Play Video</string>
    <string name="whats_hot_category_new_campaign">Brand Highlights</string>
    <string name="whats_hot_category_new_product">Hot Products</string>
    <string name="whats_hot_category_new_reading">FANCL Video Today</string>
    <string name="whats_hot_category_new_promotion">Latest Promotion</string>
    <string name="whats_hot_category_new_magazine">Lifestyle Magazine</string>
    <string name="promotion_point_gift_available_view_point_btn_title">Check My Record</string>
    <string name="promotion_vip_promotion_tab_bar_title">VIP Promotion</string>
    <string name="promotion_icoupon_tab_bar_title">MyCoupon</string>
    <string name="promotion_latest_promotion_tab_bar_title">Latest Promotion</string>
    <string name="promotion_latest_promotion_point_gift_sub_tab_bar_title">Gift Redemption</string>
    <string name="promotion_latest_promotion_skincare_promotion_sub_tab_bar_title">Other Promotion</string>
    <string name="promotion_latest_promotion_fs_promotion_sub_tab_bar_title">FS Promotion</string>
    <string name="promotion_detail_valid">Valid til:</string>
    <string name="promotion_detail_coupon_no">Coupon No.:</string>
    <string name="promotion_detail_gift_point_required">Gift Point Required:</string>
    <string name="promotion_detail_gift_name">Gift:</string>
    <string name="promotion_detail_answer_all_questions">Please answer all questions</string>
    <string name="promotion_detail_redeem_btn_title">Redeem</string>
    <string name="promotion_detail_quantity">Quantity:</string>
    <string name="promotion_detail_gift_code">Gift Code:</string>
    <string name="promotion_detail_gift_point_deducted">Gift Point Deducted:</string>
    <string name="purchase_title">Start to purchase</string>
    <string name="offline_btn_title">Offline</string>
    <string name="go_to_pos">Scan the QR Code of FANCL at the cashier register</string>
    <string name="purchase_waiting_response_title">Connecting to cashier at\n</string>
    <string name="purchase_waiting_response_shop_title">branch</string>
    <string name="purchase_waiting_response_msg">waiting response...</string>
    <string name="purchase_connect_to_pos_successfully_title">You have successfully connected to the cashier registered at</string>
    <string name="purchase_connect_to_pos_successfully_shop_title">.Press Confirm to return to the homepage.</string>
    <string name="purchase_fail_to_connect_to_pos_title">Unable to connect to cashier register.\nPlease try again.</string>
    <string name="purchase_try_again_fail_title">Problems occurred during connection</string>
    <string name="purchase_try_again_fail_msg">Unstable network. Enter the code to continue.</string>
    <string name="purchase_enter_4_digit_key_title">Enter the code provided by FANCL</string>
    <string name="purchase_9_digit_security_code_title">9-digit verification code</string>
    <string name="purchase_9_digit_security_code_msg">Present the 9-digit code to FANCL</string>
    <string name="purchase_offline_alert_msg">if you experience some technical problem, you can consider to use "security code" by pressing the below "confirm"</string>
    <string name="purchase_invalid_qr_code">This QR code is invalid, please scan again</string>
    <string name="beauty_ichannel_brief_intro_read_more_btn_title">Read More</string>
    <string name="beauty_ichannel_detail_related_product_btn_title">相關產品或優惠</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="beauty_fancl_magazine_tab_bar_title">Brand Dynamics</string>
    <string name="beauty_beauty_tips_tab_bar_title">Info Beauty</string>
    <string name="beauty_fancl_tv_tab_bar_title">Loving Life</string>
    <string name="beauty_fancl_search_hint">Video Search</string>
    <string name="read_more">Read More</string>
    <string name="related">Related</string>
    <string name="play_video">Play Video</string>
    <string name="gp_record">Check My Record</string>
    <string name="related_information">Information</string>
    <string name="related_product">Product</string>
    <string name="language">Language</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="email_receipt">Get Email Receipt</string>
    <string name="language_tc">繁體</string>
    <string name="language_sc">简体</string>
    <string name="language_en">English</string>
    <string name="logout">Logout</string>
    <string name="qna_start">Start</string>
    <string name="qna_title">Understanding and caringe for your skin</string>
    <string name="qna_intro">Identifying your skin type and temperament is the first step to good skin. Do drop by any of our FANCL stores for a professional skin analysis.</string>
    <string name="qna_complete">Test Completed</string>
    <string name="qna_restart">Restart</string>
    <string name="qna_complete_content">Understanding and caringe for your skin</string>
    <string name="facebook_title">\		Share To Facebook</string>
    <string name="twitter_title">\		Share On Twitter</string>
    <string name="email_title">\		Share via Email</string>
    <string name="favourite_title">Add to Favourite</string>
    <string name="my_account_member_id_title">Member ID: </string>
    <string name="my_account_membership_grade_title">Membership Grade: </string>
    <string name="my_account_current_gift_point_title">Current Gift Point: </string>
    <string name="my_account_point_expiry_date_title">Point Expiry Date: </string>
    <string name="my_account_bonus_point_record">Bonus Point Record</string>
</resources>