<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include layout="@layout/detail_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/list_bar" >

                <TextView
                    android:id="@+id/languageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/language"
                    android:textColor="@color/Fancl_Blue" />

                <RadioGroup
                    android:id="@+id/languageRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/tcRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radiobutton"
                        android:text="@string/language_tc"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <RadioButton
                        android:id="@+id/scRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radiobutton"
                        android:text="@string/language_sc"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <RadioButton
                        android:id="@+id/enRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radiobutton"
                        android:text="@string/language_en"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/list_bar" >

                <TextView
                    android:id="@+id/facebookLogin_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/facebook"
                    android:textColor="@color/Fancl_Blue" />

                <Button
                    android:id="@+id/facebookLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/btn_setting_login"
                    android:text="@string/login_btn_title"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/list_bar" >

                <TextView
                    android:id="@+id/twitterLogin_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/twitter"
                    android:textColor="@color/Fancl_Blue" />

                <Button
                    android:id="@+id/twitterLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/btn_setting_login"
                    android:text="@string/login_btn_title"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/list_bar" >

                <TextView
                    android:id="@+id/emailReceiptText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/email_receipt"
                    android:textColor="@color/Fancl_Blue" />

                <Button
                    android:id="@+id/email_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/btn_setting_cursor_off" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" >

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/btn_logout"
                    android:text="@string/logout"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>