<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/detail_bg" />

    <LinearLayout
        android:id="@+id/qnaLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/qna_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/qna_title"
            android:textColor="@color/Fancl_Blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/qna_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/qna_intro"
            android:textColor="@color/Fancl_Grey"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qnaLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/qna_start"
        android:textColor="@color/White"
        android:background="@drawable/btn_restart" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startButton"
        android:layout_marginTop="15dp"
        android:src="@drawable/breakline" />

</RelativeLayout>